--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "react-dom": "^19.2.0",
     "react": "^19.2.0",
     "framer-motion": "^12.23.24",
-    "@google/genai": "^1.30.0"
+    "@google/genai": "^1.30.0",
+    "@neondatabase/serverless": "^0.10.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "@vercel/node": "^3.0.21",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
